demos/pod-disruption-budget/good/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pod-disruption-budget
spec:
  replicas: 3
  selector:
    matchLabels:
      app: pod-disruption-budget
  template:
    metadata:
      labels:
        app: pod-disruption-budget
    spec:
      terminationGracePeriodSeconds: 20
      volumes:
        - name: web
          emptyDir: {}
      containers:
        - name: web
          image: nginx:1.25-alpine
          ports:
            - containerPort: 80
          volumeMounts:
            - name: web
              mountPath: /usr/share/nginx/html
          lifecycle:
            preStop:
              exec:
                command: ["sh", "-c", "sleep 5"]
