demos/pod-disruption-budget/good/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: pod-disruption-budget
spec:
  selector:
    app: pod-disruption-budget
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
